fixed search bar overlap

--- a/src/components/reusable/search/styles/Search.css
+++ b/src/components/reusable/search/styles/Search.css
@@ -17,6 +17,7 @@
         height: 70px;
         border: 2px inset #ccc;
         padding: 2px;
+        position: relative;
     }
 
     .searchInput, .photoMode, .submitButton {
@@ -24,10 +25,13 @@
         border: none;
         outline-width: 0;
         margin: 5px;
+        height: 99%;
+
     }
 
     .searchInput {
         font-size: 2rem;
+        margin: 0;
     }
 
     .submitButton {
@@ -40,6 +44,8 @@
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
+        z-index: 1;
+
     }
 
     .photoForm {
